                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.1.2
  *) [TS-1035] EventProcessor::spawn_thread doesn't check that there 
   is enough event threads and segfaults. 

  *) [TS-1096] readline support for traffic_shell.

  *) [TS-1097] online help for traffic_shell.

  *) [TS-1066] TSHttpTxnServerReqHdrBytesGet in InkAPI.cc has an extra
   parameter (int *bytes) from the prototype in <ts/ts.h>.
   Author: Alistair Stevenson

  *) [TS-1089] Added TSHttpConnectTransparent.

  *) [TS-1088] Added TSHttpTxnOutgoingTransparencySet to API to
   control outbound transparency.

  *) [TS-1083] Initial SSL next protocol negotiation support.

  *) [TS-1082] Obey existing optimizer CXXFLAGS and CFLAGS at configure time.

  *) [TS-1077] All proxy ports are now configured by
   proxy.config.http.server_ports. All other port configuration values
   are deprecated.

  *) [TS-1091] CFLAGS=-w` causes configure script to wrongly guess style of
   `gethostbyname_r` on BSD flavors. Author: Marc Abramowitz.

  *) [TS-1073] no_dns_just_forward_to_parent configuration parameter is
   ignored/not used. Author: Kevin Giles.

  *) [TS-996] HTTPHdr::m_host goes stale if HdrHeap::evacuate_from_str_heaps
   is called. Author: B. Wyatt.

  *) [TS-1041] Populate sockaddr length. Author: James Peach.

  *) [TS-1081] Eliminate an additional copy of the pristine URL string.

  *) [TS-1038] TSHttpTxnErrorBodySet() can leak memory.
   Author: Brian Geffon

  *) [TS-1049] TS hangs (dead lock) on HTTPS POST requests.
   Author: Wilson Ho

  *) [TS-1056] Lost UA connections can show up as "400 ERR_INVALID_REQ"
   in logs.

  *) [TS-1048] Add TS API to enable plugins to use traffic server
   configuration infrastructure. Author: Bianca Cooper.

  *) [TS-1074] PluginVC should schedule to the local queue instead of the
  external queue. Author: Brian Geffon

  *) [TS-1032] Assertion when upstream connection is established (with event